refactor(build.gradle.kts): 过滤掉一个JDK24+已移除的参数